--- a/www.nass.gov.ng/ebd13e7ca6585b73968bdd679cbd92ca80c87796.yml
+++ b/www.nass.gov.ng/ebd13e7ca6585b73968bdd679cbd92ca80c87796.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 04:14:01 GMT
+    - Fri, 30 Mar 2018 18:29:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Y9fSttLFJhM%2C95DG1MptA2; path=/
+    - PHPSESSID=wpGla3N7MXIF%2C5YS043763; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 04:14:01 GMT
+recorded_at: Fri, 30 Mar 2018 18:29:47 GMT
