--- a/www.nass.gov.ng/78389f9092a65f5cf65f0f00eef198df44e3382e.yml
+++ b/www.nass.gov.ng/78389f9092a65f5cf65f0f00eef198df44e3382e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 04:17:12 GMT
+    - Fri, 30 Mar 2018 18:32:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lxleB40HNnMYz9t9bTdNH3; path=/
+    - PHPSESSID=PX%2CKl1I4-T%2CjyRSWW7tVI2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 04:17:12 GMT
+recorded_at: Fri, 30 Mar 2018 18:32:43 GMT
