--- a/www.nass.gov.ng/d3db04dfd302ba4b1beaf1aba989666a803c3593.yml
+++ b/www.nass.gov.ng/d3db04dfd302ba4b1beaf1aba989666a803c3593.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 04:18:28 GMT
+    - Fri, 30 Mar 2018 18:34:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tNwpx%2C%2Cu3mHg12R5rdTrO3; path=/
+    - PHPSESSID=W%2CuvCPaWm1X8xHVHcms4c3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 04:18:28 GMT
+recorded_at: Fri, 30 Mar 2018 18:34:23 GMT
