--- a/www.nass.gov.ng/c4d376a5b2e869eb531cee9ca607878e73f126ec.yml
+++ b/www.nass.gov.ng/c4d376a5b2e869eb531cee9ca607878e73f126ec.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 06:57:56 GMT
+    - Fri, 10 Aug 2018 21:55:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2C13vQyqEMFvxkm3v42lKS0; path=/
+    - PHPSESSID=XKoLU6sKRWT0TOQZFxx5h2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 09 Aug 2018 06:57:56 GMT
+recorded_at: Fri, 10 Aug 2018 21:55:39 GMT
