--- a/www.nass.gov.ng/682bf2fca1a4d8707e0420247255cd5d46775f03.yml
+++ b/www.nass.gov.ng/682bf2fca1a4d8707e0420247255cd5d46775f03.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:04:17 GMT
+    - Fri, 10 Aug 2018 22:00:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0PeCvAuxd6%2C9IA212SHO-3; path=/
+    - PHPSESSID=ycRNpDa-z0FRBBzZGXZEq2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:04:17 GMT
+recorded_at: Fri, 10 Aug 2018 22:00:35 GMT
