--- a/www.nass.gov.ng/6289e027e6fa792b81e6659b7ca189c8bd059faa.yml
+++ b/www.nass.gov.ng/6289e027e6fa792b81e6659b7ca189c8bd059faa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:09:16 GMT
+    - Fri, 10 Aug 2018 22:04:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xZM9mi7hL7Ph-ULZMDERV1; path=/
+    - PHPSESSID=WtiHXxY%2C4fPpurBtcYAZ%2C2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:09:16 GMT
+recorded_at: Fri, 10 Aug 2018 22:04:17 GMT
