--- a/www.nass.gov.ng/62d5139bbef8c034d48ec5dd8c9d9f3548bab7e3.yml
+++ b/www.nass.gov.ng/62d5139bbef8c034d48ec5dd8c9d9f3548bab7e3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:11:19 GMT
+    - Fri, 10 Aug 2018 22:06:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ypJY3H0UdxrYzGSCr9%2C263; path=/
+    - PHPSESSID=R6z9xaG5fe8NSYV9Aagc71; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:11:19 GMT
+recorded_at: Fri, 10 Aug 2018 22:06:12 GMT
