--- a/www.nass.gov.ng/6f48e23d2d7a89ec4f22f1e3531817119d8fe954.yml
+++ b/www.nass.gov.ng/6f48e23d2d7a89ec4f22f1e3531817119d8fe954.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:12:16 GMT
+    - Fri, 10 Aug 2018 22:07:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=U%2CXXhkfNxIQCkgXOA6D0J3; path=/
+    - PHPSESSID=1B8o%2C4JNPh5BHEprMYBSo3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:12:16 GMT
+recorded_at: Fri, 10 Aug 2018 22:07:03 GMT
