--- a/www.nass.gov.ng/814144774172e86d057491ffd55cba0287c4307a.yml
+++ b/www.nass.gov.ng/814144774172e86d057491ffd55cba0287c4307a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:13:33 GMT
+    - Fri, 10 Aug 2018 22:07:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VL7ckZih%2Ch12av3GKJoxX3; path=/
+    - PHPSESSID=0zZHEV0ULaSMBgb2bGSze3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:13:33 GMT
+recorded_at: Fri, 10 Aug 2018 22:07:54 GMT
