--- a/www.nass.gov.ng/f02a1f50d452d1cccc572b8b1bf51ebcb08e663e.yml
+++ b/www.nass.gov.ng/f02a1f50d452d1cccc572b8b1bf51ebcb08e663e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:17:04 GMT
+    - Fri, 10 Aug 2018 22:12:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tWqVkbod%2CspK23hZ1OsOP3; path=/
+    - PHPSESSID=tMfsFUCw9shpyH47NNKm42; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:17:04 GMT
+recorded_at: Fri, 10 Aug 2018 22:12:10 GMT
