--- a/www.nass.gov.ng/2e47dd353b090ddc4c77670008278e5d53d86165.yml
+++ b/www.nass.gov.ng/2e47dd353b090ddc4c77670008278e5d53d86165.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:17:53 GMT
+    - Fri, 10 Aug 2018 22:13:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wRl2aTzJ3EQ0R5S57ov8r3; path=/
+    - PHPSESSID=B2VvQgc9Ah5FhNzO-D0q%2C0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:17:53 GMT
+recorded_at: Fri, 10 Aug 2018 22:13:02 GMT
