--- a/www.nass.gov.ng/9ffefc7d40d6e09126dc9e84c91db14388bb686b.yml
+++ b/www.nass.gov.ng/9ffefc7d40d6e09126dc9e84c91db14388bb686b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:20:16 GMT
+    - Fri, 10 Aug 2018 22:16:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lHw2ynw36b72%2CDutVBtGb0; path=/
+    - PHPSESSID=1ZszUL-Lqh71l17lLajjc3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:20:17 GMT
+recorded_at: Fri, 10 Aug 2018 22:16:12 GMT
