--- a/www.nass.gov.ng/fc22d9457586d19005ca60a3bd828daee1fa5fa4.yml
+++ b/www.nass.gov.ng/fc22d9457586d19005ca60a3bd828daee1fa5fa4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:22:43 GMT
+    - Fri, 10 Aug 2018 22:18:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lBrVCo1Xw4nWV4jY1h-451; path=/
+    - PHPSESSID=Z3qRpFlNcuqX5yCElV%2Cko1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:22:43 GMT
+recorded_at: Fri, 10 Aug 2018 22:18:31 GMT
