--- a/www.nass.gov.ng/496c0b3e62ceafe38789906b5d9a1501a4b241e3.yml
+++ b/www.nass.gov.ng/496c0b3e62ceafe38789906b5d9a1501a4b241e3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:25:29 GMT
+    - Fri, 10 Aug 2018 22:22:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eYglEpZ3tTjHOYMZZ%2Cu8K1; path=/
+    - PHPSESSID=gQ5LJco3DfDAhSYh6AkJw0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:25:29 GMT
+recorded_at: Fri, 10 Aug 2018 22:22:10 GMT
