--- a/www.nass.gov.ng/4212c5b79c6a32f139e80e1cdb7849b237cde473.yml
+++ b/www.nass.gov.ng/4212c5b79c6a32f139e80e1cdb7849b237cde473.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:26:18 GMT
+    - Fri, 10 Aug 2018 22:23:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MTX%2CvvBg-6DF5EC4Vhvi71; path=/
+    - PHPSESSID=1VFBRk1HzYXFf-0w6LyDY0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:26:18 GMT
+recorded_at: Fri, 10 Aug 2018 22:23:04 GMT
