--- a/www.nass.gov.ng/80e59fded4721a59ed2e2e449b197432d8948831.yml
+++ b/www.nass.gov.ng/80e59fded4721a59ed2e2e449b197432d8948831.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:28:52 GMT
+    - Fri, 10 Aug 2018 22:25:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dczfZ29wtC57aZdZa4JJu0; path=/
+    - PHPSESSID=WwG7g-Yv2YIkk2Tszu2K%2C0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:28:52 GMT
+recorded_at: Fri, 10 Aug 2018 22:25:50 GMT
