--- a/www.nass.gov.ng/b5828353ae0645860579652e5b51780ccb491474.yml
+++ b/www.nass.gov.ng/b5828353ae0645860579652e5b51780ccb491474.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:30:31 GMT
+    - Fri, 10 Aug 2018 22:28:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=koILN2bGEW%2C-yU7ISX-Gd1; path=/
+    - PHPSESSID=Z9a6ZpQHisnnfLPCExt723; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:30:31 GMT
+recorded_at: Fri, 10 Aug 2018 22:28:04 GMT
