--- a/www.nass.gov.ng/ada7ce1084ed4716a3a8ba214f871f3c47faf2ac.yml
+++ b/www.nass.gov.ng/ada7ce1084ed4716a3a8ba214f871f3c47faf2ac.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:33:32 GMT
+    - Fri, 10 Aug 2018 22:30:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zlzxPUx218rTYPS23fXhw2; path=/
+    - PHPSESSID=D5FVfcYZbkeM%2C%2CNihIC7M0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:33:32 GMT
+recorded_at: Fri, 10 Aug 2018 22:30:01 GMT
