--- a/www.nass.gov.ng/c87dc53c6d47627e8026fb21c6b3dd1da0adf76c.yml
+++ b/www.nass.gov.ng/c87dc53c6d47627e8026fb21c6b3dd1da0adf76c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:34:17 GMT
+    - Fri, 10 Aug 2018 22:31:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jYe6zKqDXeJAw%2CFy6XchY1; path=/
+    - PHPSESSID=O087kjVi7P7ObaCSikhyN2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:34:17 GMT
+recorded_at: Fri, 10 Aug 2018 22:31:00 GMT
