--- a/www.nass.gov.ng/58315a448e7656d285c58b27aefd893ef974ea93.yml
+++ b/www.nass.gov.ng/58315a448e7656d285c58b27aefd893ef974ea93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:42:22 GMT
+    - Fri, 10 Aug 2018 22:37:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DXC51-1G6Q7w%2CUeueESxs2; path=/
+    - PHPSESSID=A5sLOAUNjl6A3IwJJ-3gD1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:42:22 GMT
+recorded_at: Fri, 10 Aug 2018 22:37:53 GMT
