--- a/www.nass.gov.ng/3bdb36576d8d0a3b8b9e3950d0f641d907652ea3.yml
+++ b/www.nass.gov.ng/3bdb36576d8d0a3b8b9e3950d0f641d907652ea3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:47:11 GMT
+    - Fri, 10 Aug 2018 22:42:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cNvue4BaSxMgeLfZ0%2CuHC2; path=/
+    - PHPSESSID=z1g5qIYjE9zZ-zZtNwbP82; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:47:12 GMT
+recorded_at: Fri, 10 Aug 2018 22:42:05 GMT
