--- a/www.nass.gov.ng/54d41f615a3f530d636a65bfad2b8e3ac60941a7.yml
+++ b/www.nass.gov.ng/54d41f615a3f530d636a65bfad2b8e3ac60941a7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:53:52 GMT
+    - Fri, 10 Aug 2018 22:47:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1owAaCLk4%2CB25wQXQwPKJ0; path=/
+    - PHPSESSID=hWTn20DzEU5quQNw9bnzS0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:53:52 GMT
+recorded_at: Fri, 10 Aug 2018 22:47:34 GMT
