--- a/www.nass.gov.ng/0006de1dd770145855ac0103be15b104859bda0c.yml
+++ b/www.nass.gov.ng/0006de1dd770145855ac0103be15b104859bda0c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 07:57:04 GMT
+    - Fri, 10 Aug 2018 22:50:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hE9QIkYEJUil8a2U73JwK2; path=/
+    - PHPSESSID=macig%2CdRn5zabQlhLP-nn2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 07:57:04 GMT
+recorded_at: Fri, 10 Aug 2018 22:50:31 GMT
