--- a/www.nass.gov.ng/b5848ea20293bb8e210857fae64800264f00f0a4.yml
+++ b/www.nass.gov.ng/b5848ea20293bb8e210857fae64800264f00f0a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:04:16 GMT
+    - Fri, 10 Aug 2018 22:57:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=M9VXW5PRZfN%2Ces9oBvBJm2; path=/
+    - PHPSESSID=Qv7tLpvZJnkY5MptiRTN-1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:04:16 GMT
+recorded_at: Fri, 10 Aug 2018 22:57:39 GMT
