--- a/www.nass.gov.ng/88556bd0e840159ac9c15a946a553fec97046a88.yml
+++ b/www.nass.gov.ng/88556bd0e840159ac9c15a946a553fec97046a88.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:05:12 GMT
+    - Fri, 10 Aug 2018 22:58:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1Ut2ypLGjKpKdqigc3kN%2C1; path=/
+    - PHPSESSID=yHrEEAzGUjnS9xxLDr9RN3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:05:12 GMT
+recorded_at: Fri, 10 Aug 2018 22:58:34 GMT
