--- a/www.nass.gov.ng/883bb8348c43cdc1799da9a76d72721bd7301292.yml
+++ b/www.nass.gov.ng/883bb8348c43cdc1799da9a76d72721bd7301292.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:06:12 GMT
+    - Fri, 10 Aug 2018 22:59:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=u2ucGwYZbWOHw7%2CSd%2Cyik3; path=/
+    - PHPSESSID=AVu4up5iAsygZ-Xep9Eah1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:06:12 GMT
+recorded_at: Fri, 10 Aug 2018 22:59:26 GMT
