--- a/www.nass.gov.ng/58460865385611fe3978b3319b94e554cc6b1c23.yml
+++ b/www.nass.gov.ng/58460865385611fe3978b3319b94e554cc6b1c23.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:17:10 GMT
+    - Fri, 10 Aug 2018 23:09:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CSB2PsHOng10Z-iToH7MQ3; path=/
+    - PHPSESSID=%2CMUa-70E9SgoZY5FHTEWV3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:17:11 GMT
+recorded_at: Fri, 10 Aug 2018 23:09:05 GMT
