--- a/www.nass.gov.ng/e8c8853bb750cd38cc6b84c3aaa8947ab9679a39.yml
+++ b/www.nass.gov.ng/e8c8853bb750cd38cc6b84c3aaa8947ab9679a39.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:29:15 GMT
+    - Fri, 10 Aug 2018 23:18:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BL%2C%2CJ5aJ8uG41d1n%2C-iMO3; path=/
+    - PHPSESSID=Up6ybmnrqq0XVaS4gWTdk2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:29:15 GMT
+recorded_at: Fri, 10 Aug 2018 23:18:33 GMT
