--- a/www.nass.gov.ng/58a69aba2de7d6c711c512c885b65575665e794f.yml
+++ b/www.nass.gov.ng/58a69aba2de7d6c711c512c885b65575665e794f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:30:52 GMT
+    - Fri, 10 Aug 2018 23:19:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wPn8co%2C0vCNss5XgoYIdJ1; path=/
+    - PHPSESSID=1w54VkwzsYIGZJK2cYHDp3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:30:52 GMT
+recorded_at: Fri, 10 Aug 2018 23:19:21 GMT
