--- a/www.nass.gov.ng/57a0c8bba1a1c8eda49c99b613857de23ff512a8.yml
+++ b/www.nass.gov.ng/57a0c8bba1a1c8eda49c99b613857de23ff512a8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:34:59 GMT
+    - Fri, 10 Aug 2018 23:21:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=A%2C8MzYWJqkHOYTe4UXj5r2; path=/
+    - PHPSESSID=VRW9rzt2b4A0RfdPjV0GX1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:34:59 GMT
+recorded_at: Fri, 10 Aug 2018 23:21:51 GMT
