--- a/www.nass.gov.ng/de5254844cf8d346a1878728cb84aa920a2f7e26.yml
+++ b/www.nass.gov.ng/de5254844cf8d346a1878728cb84aa920a2f7e26.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:37:36 GMT
+    - Fri, 10 Aug 2018 23:24:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TDweAPTGLytYtNu%2C4RjCx3; path=/
+    - PHPSESSID=g-koRLKubKzj3qZ0m5AIA2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:37:37 GMT
+recorded_at: Fri, 10 Aug 2018 23:24:39 GMT
