--- a/www.nass.gov.ng/b10f2adeac6ce24c281bb88ef7a9bdab3ef51bfd.yml
+++ b/www.nass.gov.ng/b10f2adeac6ce24c281bb88ef7a9bdab3ef51bfd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:44:52 GMT
+    - Fri, 10 Aug 2018 23:30:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mPc%2CLQome%2Ck82hxRR4CkF1; path=/
+    - PHPSESSID=FcZiJP9iMNwL%2Cq64nCVG62; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:44:52 GMT
+recorded_at: Fri, 10 Aug 2018 23:30:52 GMT
