--- a/www.nass.gov.ng/7fe7e8117c6baaea7515876165969ce9d11d96e0.yml
+++ b/www.nass.gov.ng/7fe7e8117c6baaea7515876165969ce9d11d96e0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:45:39 GMT
+    - Fri, 10 Aug 2018 23:31:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uyuOoKgvC5Lb0V-SeI%2CoL1; path=/
+    - PHPSESSID=GxfTWcjjrhhml2tVSKDlj3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:45:40 GMT
+recorded_at: Fri, 10 Aug 2018 23:31:56 GMT
