--- a/www.nass.gov.ng/4583a7bb0bea44179d736636faaa51b9d67274f2.yml
+++ b/www.nass.gov.ng/4583a7bb0bea44179d736636faaa51b9d67274f2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:47:18 GMT
+    - Fri, 10 Aug 2018 23:34:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PjZxfjE8zkAk%2Ce-7cbn5T0; path=/
+    - PHPSESSID=gUrB0B8sKT4BgiBebjNoE2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:47:18 GMT
+recorded_at: Fri, 10 Aug 2018 23:34:08 GMT
