--- a/www.nass.gov.ng/d1fdec541f452b5d60b81e396998ca61c8f268b1.yml
+++ b/www.nass.gov.ng/d1fdec541f452b5d60b81e396998ca61c8f268b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:48:53 GMT
+    - Fri, 10 Aug 2018 23:35:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7C-N4ceHQPOlLW3AxB%2COI2; path=/
+    - PHPSESSID=mAAnXhxasTmZ%2CNgmh-uiP1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:48:53 GMT
+recorded_at: Fri, 10 Aug 2018 23:35:48 GMT
