--- a/www.nass.gov.ng/c841336894a900ec7ffa2b2344cf6450c2b9c0f1.yml
+++ b/www.nass.gov.ng/c841336894a900ec7ffa2b2344cf6450c2b9c0f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:49:46 GMT
+    - Fri, 10 Aug 2018 23:36:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tb5c3bTtabt%2CgVySaJYJ31; path=/
+    - PHPSESSID=UbxFBfJ66kbLkwpbm7WGA2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:49:46 GMT
+recorded_at: Fri, 10 Aug 2018 23:36:38 GMT
