--- a/www.nass.gov.ng/40863f4c640d08070ceb73f520c31c1880611bb9.yml
+++ b/www.nass.gov.ng/40863f4c640d08070ceb73f520c31c1880611bb9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:51:15 GMT
+    - Fri, 10 Aug 2018 23:37:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rWXUhGaOGKrN87TTAq3tq0; path=/
+    - PHPSESSID=GuKS7X6n%2CcwkzIYPHa8WV3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:51:16 GMT
+recorded_at: Fri, 10 Aug 2018 23:37:26 GMT
