--- a/www.nass.gov.ng/452f9cdd908b3d7840ee865a55a45e6718a29ff7.yml
+++ b/www.nass.gov.ng/452f9cdd908b3d7840ee865a55a45e6718a29ff7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:04:28 GMT
+    - Fri, 10 Aug 2018 23:49:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HLF0a7jFhjxq0fMGZgGJp1; path=/
+    - PHPSESSID=sVZFhi8D6gIyI%2COTK9XqI2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:04:28 GMT
+recorded_at: Fri, 10 Aug 2018 23:49:18 GMT
