--- a/www.nass.gov.ng/b30bb148820d25258257a5a5104a1a0471de0039.yml
+++ b/www.nass.gov.ng/b30bb148820d25258257a5a5104a1a0471de0039.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:06:11 GMT
+    - Fri, 10 Aug 2018 23:50:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=U5fwsjh5r2tTSZ%2C0ZVAaC3; path=/
+    - PHPSESSID=MBgX62wWCif4OayTMFIcC1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:06:11 GMT
+recorded_at: Fri, 10 Aug 2018 23:50:53 GMT
