--- a/www.nass.gov.ng/f0abda3d5fbf7e2b60ec2a1ad53b2d379647e123.yml
+++ b/www.nass.gov.ng/f0abda3d5fbf7e2b60ec2a1ad53b2d379647e123.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:07:05 GMT
+    - Fri, 10 Aug 2018 23:51:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hW30yDXVGDktHk4LN%2C2Lu3; path=/
+    - PHPSESSID=Q1zc9O1%2C0tVT%2CEn1wtDhe1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:07:05 GMT
+recorded_at: Fri, 10 Aug 2018 23:51:38 GMT
