--- a/www.nass.gov.ng/b23d32c1d9e36ce93bf213777077c60913aef7fa.yml
+++ b/www.nass.gov.ng/b23d32c1d9e36ce93bf213777077c60913aef7fa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:14:06 GMT
+    - Fri, 10 Aug 2018 23:57:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oaCFiWJo4S%2CISUS5EM6f22; path=/
+    - PHPSESSID=IREYJExjYV2ip92H2i6-f2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:14:06 GMT
+recorded_at: Fri, 10 Aug 2018 23:57:18 GMT
