--- a/www.nass.gov.ng/6f0954c8489964edc5aff4e5709e6f55bc32b5f8.yml
+++ b/www.nass.gov.ng/6f0954c8489964edc5aff4e5709e6f55bc32b5f8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:14:55 GMT
+    - Fri, 10 Aug 2018 23:58:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oGp3upKRXGrlnvOA0F2D43; path=/
+    - PHPSESSID=c%2CMFi9-GKgLS5kqoAp5D%2C1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:14:55 GMT
+recorded_at: Fri, 10 Aug 2018 23:58:04 GMT
