--- a/www.nass.gov.ng/a8f02fbf5604200ff2e73b363b6e202d109c2bc6.yml
+++ b/www.nass.gov.ng/a8f02fbf5604200ff2e73b363b6e202d109c2bc6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:28:23 GMT
+    - Sat, 11 Aug 2018 00:09:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-oEJcuFO5SOTo9cQ9Utaj0; path=/
+    - PHPSESSID=5mg2ilCCR5Ur1AIHfBB%2CC2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:28:23 GMT
+recorded_at: Sat, 11 Aug 2018 00:09:24 GMT
