--- a/www.nass.gov.ng/3302396405cf4ed208cb6255e0dc0f70094097a9.yml
+++ b/www.nass.gov.ng/3302396405cf4ed208cb6255e0dc0f70094097a9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:31:38 GMT
+    - Sat, 11 Aug 2018 00:11:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=J-K-W153Y6hyg8Fo%2CpACZ2; path=/
+    - PHPSESSID=rKS7P1Yg-%2CuLXbY%2Crtqxf0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:31:38 GMT
+recorded_at: Sat, 11 Aug 2018 00:11:43 GMT
