--- a/www.nass.gov.ng/c18f4dace7b8a99813c6be09d0c304642c182fdf.yml
+++ b/www.nass.gov.ng/c18f4dace7b8a99813c6be09d0c304642c182fdf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:37:35 GMT
+    - Sat, 11 Aug 2018 00:17:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cl6-PqBqqxBCgRWa%2Cg65w2; path=/
+    - PHPSESSID=iOOD-nEosHYD%2CzKMnXbys2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:37:35 GMT
+recorded_at: Sat, 11 Aug 2018 00:17:15 GMT
