--- a/www.nass.gov.ng/09b049d12a40524adf229f1ea50f2972fa03bfc8.yml
+++ b/www.nass.gov.ng/09b049d12a40524adf229f1ea50f2972fa03bfc8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:40:51 GMT
+    - Sat, 11 Aug 2018 00:20:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bNhgILwh6PwoKuQjU-aaf3; path=/
+    - PHPSESSID=hJQ24ow%2CkvOahZ4f4iAh90; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:40:51 GMT
+recorded_at: Sat, 11 Aug 2018 00:20:46 GMT
