--- a/www.nass.gov.ng/53c14dda21faf8fcba0a5daa0e4212e85e07cffb.yml
+++ b/www.nass.gov.ng/53c14dda21faf8fcba0a5daa0e4212e85e07cffb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:42:32 GMT
+    - Sat, 11 Aug 2018 00:23:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZLMDNrTBQMjtxgRv2tECw2; path=/
+    - PHPSESSID=xDP1MT27Jo-lhBLajYO%2CX2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:42:33 GMT
+recorded_at: Sat, 11 Aug 2018 00:23:01 GMT
